[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
bytes = "1.5.0"
clap = { version = "4.4.9", features = ["derive"] }
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["http1", "server", "full"] }
once_cell = "1.18.0"
pin-project-lite = "0.2.13"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["signal", "sync", "tokio-macros", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
